--- a/module2test/index.css
+++ b/module2test/index.css
@@ -8,20 +8,19 @@ header{
 	text-align: center;
 	font-size: 35px;
 }
-main{
-width: 90%;
-margin: 5px;
+div.container{
+width:100%;
 padding-top: 20px;
-margin: auto;
 }
 
 h2{
 	border: 1px solid black;
 	padding-right: 20px;
 	padding-left: 20px;
-	display: inline;
+	float: right;
 	position: relative;
 	font-size: 25px;
+	margin-top: 0px;
 }
 #heading1{
 	background-color: blue;	
@@ -33,37 +32,34 @@ h2{
 	background-color: orange;
 }
 #section1,#section2,#section3{
-	border: 1px solid black;
-	background-color: purple;
-	color: white; 
+	border: 10px solid white;
+	position: relative;	
+}
+div.box{
+	border: 2px solid black;
 	margin: 10px;
-	box-sizing: content-box;
+	text-align: right;
+	background-color: purple;
+	height: 300px;
 }
 p{
 	text-align: left;	
 	font-size: 20px;
 	padding:15px;
 }
-#section1{
-	height: 300px;
-	
-}
-#section2{
-	height: 300px;
-	
-}
-#section3{
-	height: 300px;
-
-}
-.rows{
-	width: 100%;
-	padding: 10px;
-	position: relative;
-	text-align: right;
-}
 @media(min-width: 992px){
-	#section1, #section2, #section3{ float: left;
+	.col-md-1,
+.col-md-2,
+.col-md-3,
+.col-md-4,
+.col-md-5,
+.col-md-6,
+.col-md-7,
+.col-md-8,
+.col-md-9,
+.col-md-10,
+.col-md-11,
+.col-md-12{ float: left;
 	}
 	.col-md-1{
 		width: 8.33%;
@@ -75,7 +71,7 @@ p{
 		width: 25%;
 	}
 	.col-md-4{
-		width:30.5%;
+		width:33.33%;
 	}
 	.col-md-5{
 		width: 41.66%;
@@ -103,8 +99,18 @@ p{
 	}
 }
 @media(min-width: 768px) and (max-width: 991px) {
-#section1, #section2, #section3
- {
+.col-sm-1,
+.col-sm-2,
+.col-sm-3,
+.col-sm-4,
+.col-sm-5,
+.col-sm-6,
+.col-sm-7,
+.col-sm-8,
+.col-sm-9,
+.col-sm-10,
+.col-sm-11,
+.col-sm-12{
 float: left;}
 
 	.col-sm-1{
@@ -123,7 +129,7 @@ float: left;}
 		width: 41.66%;
 	}
 	.col-sm-6{
-		width: 46%;
+		width: 50%;
 	}
 	.col-sm-7{
 		width: 58.33%;
@@ -141,12 +147,22 @@ float: left;}
 		width: 91.66%;
 	}
 	.col-sm-12{
-		width: 95%;
+		width: 100%;
 	}	
 }
 @media(max-width: 767px){
-#section1, #section2, #section3
-{
+.col-xs-1,
+.col-xs-2,
+.col-xs-3,
+.col-xs-4,
+.col-xs-5,
+.col-xs-6,
+.col-xs-7,
+.col-xs-8,
+.col-xs-9,
+.col-xs-10,
+.col-xs-11,
+.col-xs-12{
 	float: left;
 	}
 	.col-xs-1{
